flex/flex-tests/testData/js2_highlighting/CheckReadWrite.js2
interface IFoo {
  function get foo():int;
}

var v:IFoo;
const aConst = 2;
++<error>aConst</error>;
v.<error descr="Attempt to assign to const variable"><weak_warning descr="Unresolved write property">foo</weak_warning></error>++;
